--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-# Skriv stuff vi skal ignore her
+# Filer/mapper som ikke skal legges under versjonskontroll.
+
+# Ignorer denne filen
+.gitignore
+
+# IntelliJ/PHPStorm IDE mappe
+.idea
