--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# Filer/mapper som ikke skal legges under versjonskontroll.
-
-# Ignorer denne filen
-.gitignore
+# Ignore configuration file
 php/config.php
-/img/*
 
-# IntelliJ/PHPStorm IDE mappe
+# Ignore IntelliJ/PHPStorm IDE folder
 .idea
